A quick&dirty translation of the newest strings.

--- a/uk/mail/chrome/messenger/activity.properties
+++ b/uk/mail/chrome/messenger/activity.properties
@@ -2,60 +2,60 @@
 # FIXME: localize
 
 # Status Text
-paused2=Paused
-processing=Processing
-notStarted=Not Started
-failed=Failed
-waitingForInput=Waiting for input
-waitingForRetry=Waiting for retry
-completed=Completed
-canceled=Canceled
+paused2=Пауза
+processing=Обробка
+notStarted=Не почато
+failed=Невдача
+waitingForInput=Очікування вводу
+waitingForRetry=Очікування наступної спроби
+completed=Завершено
+canceled=Скасовано
 
 # LOCALIZATION NOTE (yesterday): Displayed time for files finished yesterday
-yesterday=Yesterday
+yesterday=Вчора
 # LOCALIZATION NOTE (monthDate): #1 month name; #2 date number; e.g., January 22
 monthDate=#1 #2
 
 # Send Message
-sendingMessage=Sending Message
+sendingMessage=Відправка листа
 # LOCALIZATION NOTE (sendingMessageTo): %S will be replaced by the first name or newsgroup that the message is being sent to.
-sendingMessageTo=Sending Message to %S
-sentMessage=Sent Message
+sendingMessageTo=Відправка листа до %S
+sentMessage=Надіслано листа
 # LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
-sentMessageTo=Sent Message to %S
-failedToSendMessage=Failed to send message
+sentMessageTo=Надіслано листа до %S
+failedToSendMessage=Невдача при надсиланні листа
 # LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
-failedToSendMessageTo=Failed to send message to %S
+failedToSendMessageTo=Невдача при надсиланні листа до %S
 
 # LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
 # Place the word %1$S in your translation where the number of the message being downloaded should appear.
 # Place the word %2$S in your translation where the total number of pending messages should appear.
 # Place the word %3$S in your translation where the name of the folder being processed should appear.
-autosyncProcessProgress=Downloading %1$S of %2$S in %3$S
+autosyncProcessProgress=Завантаження  %1$S з %2$S у %3$S
 # LOCALIZATION NOTE (autosyncProcessDisplayText): %S will be replaced by the folder name
-autosyncProcessDisplayText=Bringing folder %S up to date
+autosyncProcessDisplayText=Оновлення %S
 # LOCALIZATION NOTE (autosyncEventDisplayText): %S will be replaced by the account name
-autosyncEventDisplayText=%S is up to date
+autosyncEventDisplayText=%S оновлене
 # LOCALIZATION NOTE (autosyncEventStatusText): %S will be replaced by total number of downloaded messages
-autosyncEventStatusText=Total number of messages downloaded: %S
-autosyncEventStatusTextNoMsgs=No messages downloaded
+autosyncEventStatusText=Всього завантажено: %S листів
+autosyncEventStatusTextNoMsgs=Повідомлення не завантажені
 # LOCALIZATION NOTE (autosyncContextDisplayText): %S will be replaced by the account name
-autosyncContextDisplayText=Synchronizing: %S
+autosyncContextDisplayText=Синхронізація: %S
 
 # Message actions that show up in activity manager
 # LOCALIZATION NOTE (deletedMessages): #1 number of messages
-deletedMessages=Deleted #1 message;Deleted #1 messages
+deletedMessages=Вилучено #1 лист;Вилучено #1 листи;Вилучено #1 листів
 # LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
-movedMessages=Moved #1 message from #2 to #3;Moved #1 messages from #2 to #3
+movedMessages=Переміщено #1 лист із #2 до #3;Переміщено #1 листи з #2 до #3;Переміщено #1 листів з #2 до #3
 # LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
-copiedMessages=Copied #1 message from #2 to #3;Copied #1 messages from #2 to #3
+copiedMessages=Скопійовано #1 лист із #2 до #3;Скопійовано #1 листи із #2 до #3;Скопійовано #1 листів із #2 до #3;
 # LOCALIZATION NOTE (fromServerToServer): #1 source server, #2 destination server
-fromServerToServer=from #1 to #2
+fromServerToServer=від #1 до #2
 # LOCALIZATION NOTE (deletedFolder): #1 folder name
-deletedFolder=Deleted folder #1
+deletedFolder=Вилучено теку #1
 # LOCALIZATION NOTE (movedFolder): #1 and #2 are folder names
-movedFolder=Moved folder #1 into folder #2
+movedFolder=Пересунено теку #1 до теки #2
 # LOCALIZATION NOTE (copiedFolder): #1 and #2 are folder names
-copiedFolder=Copied folder #1 into folder #2
+copiedFolder=Скопійовано теку #1 до теки #2
 # LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
-renamedFolder=Renamed folder #1 to #2
+renamedFolder=Теку #1 перейменовано на #2
