--- a/uk/mail/chrome/messenger/messenger.properties
+++ b/uk/mail/chrome/messenger/messenger.properties
@@ -392,39 +392,39 @@ copyToFolderAgainAccessKey=к
 # Strings for growl notifications on Mac OS X
 
 # FIXME: localize
-alwaysLoadRemoteContentForSender1= Always load remote images from %1$S 
+alwaysLoadRemoteContentForSender1= Завжди завантажувати віддалені зображення від %1$S 
 # LOCALIZATION NOTE (autosyncProgress): Do not translate the word "%1$S" or "%2$S" below.
-autosyncProgress=Synchronizing messages in %1$S from %2$S…
-emptyJunkDontAsk=Don't ask me again.
-emptyJunkMessage=Are you sure you want to permanently delete all messages and subfolders in the Junk folder?
-emptyJunkTitle=Confirm
-emptyTrashDontAsk=Don't ask me again.
-emptyTrashMessage=Are you sure you want to permanently delete all messages and subfolders in the Trash folder?
-emptyTrashTitle=Confirm
-errorOpenMessageForMessageIdMessage=Message for message-id %S not found
-errorOpenMessageForMessageIdTitle=Error opening message-id
+autosyncProgress=Синхрозація листів %1$S із %2$S…
+emptyJunkDontAsk=Більше не питати мене.
+emptyJunkMessage=Ви певні, що хочете назавжди знищити всі листи та підтеки в теці спам?
+emptyJunkTitle=Підтвердити
+emptyTrashDontAsk=Більше не питати мене.
+emptyTrashMessage=Ви певні, що хочете назавжди знищити всі листи та підтеки в корзині?
+emptyTrashTitle=Підтвердити
+errorOpenMessageForMessageIdMessage=Не знайдено листа з ідентифікатором (message-id) %S
+errorOpenMessageForMessageIdTitle=Помилка відкриття message-id
 fromSearchCriteria=Subject or From contains:
-growlNotification=New Mail
-junkAnalysisPercentComplete=Junk analysis %S complete
-junkScoreOriginFilter=Filter
-junkScoreOriginImapFlag=IMAP Flag
-junkScoreOriginPlugin=Plugin
-junkScoreOriginUser=User
-junkScoreOriginWhitelist=Whitelist
+growlNotification=Нова пошта
+junkAnalysisPercentComplete=Спам-аналіз закінчено на %S 
+junkScoreOriginFilter=Фільтр
+junkScoreOriginImapFlag=Флаг IMAP
+junkScoreOriginPlugin=Плагін
+junkScoreOriginUser=Користувач
+junkScoreOriginWhitelist=Білий список
 mailnews.search_date_leading_zeros=true
-messageCollapsed=Collapsed
-messageExpanded=Expanded
-messageHasAttachment=Has Attachment
-messageHasFlag=Starred
-messageJunk=Junk
-messageUnread=Unread
-outboxFolderName=Outbox
+messageCollapsed=Згорнуто
+messageExpanded=Розкрито
+messageHasAttachment=Має долучення
+messageHasFlag=Позначено зіркою
+messageJunk=Небажане
+messageUnread=Непрочитане
+outboxFolderName=Вихідні
 percent=%S%%
-processingJunkMessages=Processing Junk Messages
-quotaTooltip=IMAP quota: %S KB used of %S KB total. Click for details.
-selectedMsgStatus=Selected: %S
-smtpServer-SecureAuthentication-Type-false=No
-smtpServer-SecureAuthentication-Type-true=Yes
+processingJunkMessages=Обробка небажаної пошти
+quotaTooltip=Квота IMAP: використано %S Кб із %S Кб назагал. Натисність для додаткової інформації.
+selectedMsgStatus=Вибрано: %S
+smtpServer-SecureAuthentication-Type-false=Ні
+smtpServer-SecureAuthentication-Type-true=Так
 
 folderPaneHeader_all=Всі теки
 folderPaneHeader_favorite=Улюблені теки
@@ -435,27 +435,27 @@ folderPaneHeader_unread=Нечитані теки
 headerFieldYou=Ви
 
 # FIXME: localize
-archivesFolderName=Archives
-autoCompactAlwaysAskCheckbox=Always ask me before compacting folders automatically
-compactNowButton=Compact &Now
-whatsNew=What's New
+archivesFolderName=Архіви
+autoCompactAlwaysAskCheckbox=Завжди питати мене перед автоматичним стисненням тек
+compactNowButton=Стиснути &зараз
+whatsNew=Що нового
 
 # FIXME: localize
-confirmSavedSearchTitle=Confirm Delete
-smtpServer-ConnectionSecurityType-0=None
-smtpServer-ConnectionSecurityType-1=STARTTLS, if available
+confirmSavedSearchTitle=Підтвердіть вилучення
+smtpServer-ConnectionSecurityType-0=Жодного
+smtpServer-ConnectionSecurityType-1=STARTTLS, за наявності
 smtpServer-ConnectionSecurityType-2=STARTTLS
 smtpServer-ConnectionSecurityType-3=SSL/TLS
 
 # FIXME: localize
-glodaSearch_results_why_attachment=Attachment
-glodaSearch_results_why_body=Body
-glodaSearch_results_why_contact=Contact
-glodaSearch_results_why_subject=Subject
-macBiffNotification_message=%1$S new message from %2$S.
-macBiffNotification_messages=%1$S new messages from %2$S.
-macBiffNotification_messages_extra=%1$S new messages from %2$S and %3$S more.
-macBiffNotification_messages=%1$S new messages from %2$S.
-macBiffNotification_messages_extra=%1$S new messages from %2$S and %3$S more.
-macBiffNotification_messages_extra=%1$S new messages from %2$S and %3$S more.
+glodaSearch_results_why_attachment=Долучення
+glodaSearch_results_why_body=Тіло
+glodaSearch_results_why_contact=Контакт
+glodaSearch_results_why_subject=Тема
+macBiffNotification_message=%1$S новий лист від %2$S.
+macBiffNotification_messages=%1$S нових листів від %2$S.
+macBiffNotification_messages_extra=%1$S нових листів від %2$S і ще %3$S.
+macBiffNotification_messages=%1$S нових листів від %2$S.
+macBiffNotification_messages_extra=%1$S нових листів від %2$S і ще %3$S.
+macBiffNotification_messages_extra=%1$S нових листів від %2$S і ще %3$S.
 macBiffNotification_separator=,\u0020
