--- a/uk/mail/installer/custom.properties
+++ b/uk/mail/installer/custom.properties
@@ -107,5 +107,5 @@ REG_APP_DESC=${BrandShortName} — це потужна поштова прогр
 WARN_MIN_SUPPORTED_OS_MSG=Вибачте, встановити $BrandShortName неможливо. $BrandShortName вимагає${MinSupportedVer} чи новішу версію.
 
 # FIXME: localize
-OPTIONS_MAKE_DEFAULT=&Use $BrandShortName as my default mail application
-SUMMARY_MAKE_DEFAULT=$BrandShortName will be set as your default mail application.
+OPTIONS_MAKE_DEFAULT=&Встановити $BrandShortName моїм типовим поштарем
+SUMMARY_MAKE_DEFAULT=$BrandShortName буде встановлено як вашу поштову програму за замовчанням
