One more strings. I just hate it\!

--- a/he/mail/installer/override.properties
+++ b/he/mail/installer/override.properties
@@ -34,8 +34,8 @@
 # the terms of any one of the MPL, the GPL or the LGPL.
 #
 # ***** END LICENSE BLOCK *****
-SetupCaption = התקנת $(^Name)
-UninstallCaption = הסרת $(^Name)
+SetupCaption = התקנת $BrandFullName
+UninstallCaption = הסרת $BrandFullName
 BackBtn = < ה&קודם
 NextBtn = ה&בא >
 AcceptBtn = אני &מקבל את התנאים בהסכם הרישיון
@@ -50,15 +50,15 @@ ClickNext = לחץ על הבא להמשך.
 ClickInstall = לחץ על התקן כדי להתחיל את ההתקנה.
 ClickUninstall = לחץ על הסר כדי להתחיל את ההסרה.
 Completed = הושלם
-LicenseTextRB = אנא עבור על תנאי הרישיון לפני ההתקנה של $(^NameDA). אם אתה מקבל את כל תנאי ההסכם, בחר באפשרות הראשונה למטה. $_CLICK
+LicenseTextRB = אנא עבור על תנאי הרישיון לפני ההתקנה של $BrandFullNameDA. אם אתה מקבל את כל תנאי ההסכם, בחר באפשרות הראשונה למטה. $_CLICK
 ComponentsText = סמן את הרכיבים שברצונך להתקין ובטל את הסימון מהרכיבים שאין ברצונך להתקין. $_CLICK
 ComponentsSubText2_NoInstTypes = בחר רכיבים להתקנה:
-DirText = תוכנית ההתקנה תתקין את $(^NameDA) בתיקייה הבאה. כדי להתקין בתיקייה אחרת, לחץ על עיון ובחר תיקייה אחרת. $_CLICK
+DirText = תוכנית ההתקנה תתקין את $BrandFullNameDA בתיקייה הבאה. כדי להתקין בתיקייה אחרת, לחץ על עיון ובחר תיקייה אחרת. $_CLICK
 DirSubText = תיקיית יעד
-DirBrowseText = בחר את התיקייה שבה $(^NameDA) יותקן:
+DirBrowseText = בחר את התיקייה שבה $BrandFullNameDA יותקן:
 SpaceAvailable = "מקום פנוי: "
 SpaceRequired = "מקום נדרש: "
-UninstallingText = $(^NameDA) יוסר מהתיקייה הבאה. $_CLICK
+UninstallingText = $BrandFullNameDA יוסר מהתיקייה הבאה. $_CLICK
 UninstallingSubText = מסיר מתוך:
 FileError = שגיאה בפתיחת קובץ לכתיבה:
 FileError_NoIgnore = שגיאה בפתיחת הקובץ לכתיבה: 
