Update pt-BR l10n for mail

--- a/pt-BR/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/pt-BR/mail/chrome/messenger/addressbook/addressBook.properties
@@ -45,12 +45,12 @@ emptyListName=Você precisa fornecer o nome da lista.
 lastFirstFormat=%S, %S
 firstLastFormat=%S %S
 
-newCardTitle=Novo contato
-# %S will be the card's display name
-newCardTitleWithDisplayName=Novo contato: %S
-editCardTitle=Propriedades do contato
-# %S will be the card's display name
-editCardTitleWithDisplayName=%S
+newContactTitle=New Contact
+# %S will be the contact's display name
+newContactTitleWithDisplayName=New Contact for %S
+editContactTitle=Edit Contact
+# %S will be the contact's display name
+editContactTitleWithDisplayName=Edit Contact for %S
 # don't translate vCard
 editVCardTitle=Propriedades do vCard
 # %S will be the card's display name, don't translate vCard
@@ -62,7 +62,6 @@ cardRequiredDataMissingTitle=Ausência de dados necessários
 incorrectEmailAddressFormatMessage=O endereço de email primário deve ter o formato usuario@servidor.
 incorrectEmailAddressFormatTitle=Formato incorreto do endereço do email
 
-viewCardTitle=%S
 viewListTitle=Lista de emails: %S
 mailListNameExistsTitle=Lista de emails já existe
 mailListNameExistsMessage=Uma lista de emails com este nome já existe. Por favor, selecione um diferente.
@@ -73,7 +72,7 @@ confirmDeleteAddressbookTitle=Excluir catálogo de endereços
 confirmDeleteAddressbook=Tem certeza que deseja excluir o catálogo de endereços selecionado?
 confirmDeleteCollectionAddressbook=Se este catálogo for excluído, o %S não mais coletará emails. Tem certeza que deseja remover o catálogo selecionado?
 confirmDeleteMailingList=Tem certeza que deseja excluir a lista de emails selecionada?
-confirmDeleteListsAndCards=Tem certeza que deseja excluir os contatos e listas de emails selecionados?
+confirmDeleteListsAndContacts=Are you sure you want to delete the selected contacts and mailing lists?
 confirmDeleteMailingLists=Tem certeza que deseja excluir as listas de emails selecionadas?
 
 propertyPrimaryEmail=Email
@@ -124,9 +123,9 @@ ldap_2.servers.history.description=Contatos coletados
 ldap_2.servers.osx.description=Catálogo de endereços do Mac OS X
 
 # status bar stuff
-## LOCALIZATION NOTE (totalCardStatus): 
-## %1$S is address book name, %2$S is card count
-totalCardStatus=Contatos em “%1$S”: %2$S
+## LOCALIZATION NOTE (totalContactStatus):
+## %1$S is address book name, %2$S is contact count
+totalContactStatus=Total contacts in %1$S: %2$S
 ## LOCALIZATION NOTE (matchesFound):  do not localize %S
 noMatchFound=Nenhum contato encontrado
 matchFound=Contato encontrado: 1
