--- a/pt-BR/mail/chrome/messenger/eudoraImportMsgs.properties
+++ b/pt-BR/mail/chrome/messenger/eudoraImportMsgs.properties
@@ -48,7 +48,7 @@
 # Description of import module
 ## @name EUDORAIMPORT_DESCRIPTION
 ## @loc None
-2001=Mensagens e catálogos de endereços do Eudora.
+2029=Importar mensagens, catálogos de endereços e configurações do Eudora
 
 # Success message
 ## @name EUDORAIMPORT_MAILBOX_SUCCESS
