--- a/pt-BR/mail/chrome/messenger/imapMsgs.properties
+++ b/pt-BR/mail/chrome/messenger/imapMsgs.properties
@@ -167,7 +167,7 @@
 
 ## @name IMAP_EMPTY_MIME_PART
 ## @loc None
-5032=O conteúdo da mensagem será carregado quando for solicitado.
+5032=O conteúdo da mensagem será carregado na medida do necessário.
 
 ## @name IMAP_UNABLE_TO_SAVE_MESSAGE
 ## @loc None
