--- a/pt-BR/mail/chrome/messenger/messenger.properties
+++ b/pt-BR/mail/chrome/messenger/messenger.properties
@@ -86,7 +86,8 @@ compactingFolder=Condensando a pasta %S…
 doneCompacting=Concluído, pastas condensadas
 autoCompactAllFoldersTitle=Condensar pastas
 autoCompactAllFolders=Gostaria de condensar as pastas locais e offline para salvar espaço em disco?
-autoCompactAllFoldersCheckbox=Memorizar a decisão
+autoCompactAlwaysAskCheckbox=Always ask me before compacting folders automatically
+compactNowButton=Compact &Now
 
 confirmFolderDeletionForFilter=A exclusão da pasta “%S” desativará os filtros associados a ela. Tem certeza que deseja excluir a pasta?
 alertFilterChanged=Filtros associados a esta pasta serão atualizados.
@@ -121,10 +122,10 @@ messageCollapsed=Collapsed
 
 # Used in the SMTP Account Settings panel when a server value has no properties
 smtpServerList-NotSpecified=<não especificado>
-smtpServer-SecureConnection-Type_0=Não
-smtpServer-SecureConnection-Type_1=STARTTLS, se disponível
-smtpServer-SecureConnection-Type_2=STARTTLS
-smtpServer-SecureConnection-Type_3=SMTP-over-SSL
+smtpServer-ConnectionSecurityType-0=None
+smtpServer-ConnectionSecurityType-1=STARTTLS, if available
+smtpServer-ConnectionSecurityType-2=STARTTLS
+smtpServer-ConnectionSecurityType-3=SSL/TLS
 smtpServer-SecureAuthentication-Type-false=Não
 smtpServer-SecureAuthentication-Type-true=Sim
 smtpServers-confirmServerDeletionTitle=Excluir servidor
@@ -170,6 +171,8 @@ draftsFolderName=Rascunhos
 templatesFolderName=Modelos
 outboxFolderName=Saída
 junkFolderName=Spam
+archivesFolderName=Archives
+
 
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTE (specialFolderDeletionErr): Do not translate "IMAP" in the line below
@@ -349,6 +352,16 @@ biffNotification_messages=tem %1$S novas mensagens
 newBiffNotification_message=%1$S tem %2$S nova mensagem
 newBiffNotification_messages=%1$S tem %2$S novas mensagens
 
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=%1$S new message from %2$S.
+macBiffNotification_messages=%1$S new messages from %2$S.
+macBiffNotification_messages_extra=%1$S new messages from %2$S and %3$S more.
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=, 
+
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S de %SKB usados
 quotaPercentUsed=%S%% ocupado
@@ -361,6 +374,7 @@ confirmViewDeleteTitle=Confirmar
 confirmViewDeleteMessage=Tem certeza que deseja excluir este modo de visualização?
 
 # for virtual folders
+confirmSavedSearchTitle=Confirm Delete
 confirmSavedSearchDeleteMessage=Tem certeza que deseja excluir esta pasta de pesquisa?
 
 ## @name ENTER_PASSWORD_PROMPT
@@ -455,3 +469,18 @@ processingJunkMessages=Processing Junk Messages
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
 headerFieldYou=Você
+
+# The what's new tab title, shown on version update
+whatsNew=What\'s New
+
+#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
+# glodaWhyColumn when performing a gloda-backed search, explaining why a
+# specific result is present in the search.  Because of how the message grouping
+# mechanism works, this value is both the value in the "Why" column as well as
+# the header for the group (when sorting/grouping on the why column.)  Short
+# strings are preferable so the why column can be understood without taking up
+# too much space.
+glodaSearch_results_why_contact=Contact
+glodaSearch_results_why_subject=Assunto
+glodaSearch_results_why_body=Texto da mensagem
+glodaSearch_results_why_attachment=Anexo
