--- a/pt-BR/mail/chrome/messenger/outlookImportMsgs.properties
+++ b/pt-BR/mail/chrome/messenger/outlookImportMsgs.properties
@@ -49,8 +49,8 @@
 # Description of import module
 ## @name OUTLOOKIMPORT_DESCRIPTION
 ## @loc None
-## LOCALIZATION NOTE (2001): In this item, don't translate "Outlook"
-2001=Mensagens e catálogos de endereços do Outlook.
+## LOCALIZATION NOTE (2010): In this item, don't translate "Outlook"
+2010=Importar mensagens, catálogos de endereços e configurações do Outlook
 
 # Success message
 ## @name OUTLOOKIMPORT_MAILBOX_SUCCESS
