--- a/pt-BR/mail/chrome/messenger/importMsgs.properties
+++ b/pt-BR/mail/chrome/messenger/importMsgs.properties
@@ -275,9 +275,14 @@
 2134=Personalizado 4
 
 # Description: Address book field name
-## @name IMPORT_FIELD_DESC_END
+## @name IMPORT_FIELD_DESC
 ## @loc None
 2135=Observações
+
+# Description: Address book field name
+## @name IMPORT_FIELD_DESC_END
+## @loc None
+2136=Nome de tela
 
 #Error strings
 ImportAlreadyInProgress=Uma operação importante está em andamento. Tente de novo quando a importação atual estiver concluída.
@@ -292,7 +297,7 @@ ImportSettingsSuccess=As configurações foram importadas de %S
 #Error string for mail import
 ImportMailBadModule=Não foi possível carregar o módulo de importação de mail
 ImportMailNotFound=Não foi possível localizar mensagens para importar. Certifique-se de que o aplicativo de email está instalado corretamente em seu computador.
-ImportEmptyAddressBook=Can't import empty address book %S.
+ImportEmptyAddressBook=Can\'t import empty address book %S.
 # LOCALIZATION NOTE: Do not translate the word "%S" below.
 ImportMailFailed=Um erro ocorreu ao importar mensagens de %S
 # LOCALIZATION NOTE: Do not translate the word "%S" below.
