--- a/pt-BR/mail/chrome/messenger/mime.properties
+++ b/pt-BR/mail/chrome/messenger/mime.properties
@@ -39,22 +39,6 @@
 # The following are used by libmime to emit header display in HTML
 #
 
-# Out of memory
-## @name MIME_OUT_OF_MEMORY
-## @loc None
--1000=O aplicativo está sem memória.
-
-# Can't open a temp file
-## @name MIME_UNABLE_TO_OPEN_TMP_FILE
-## @loc None
-# LOCALIZATION NOTE (-1001): Do not translate "\n%.200s.\n\n" below. It will display the name of the temporary directory
--1001=Não foi possível abrir o arquivo temporário\n%.200s.\n\nVerifique sua opção “Pasta temporária” e tente de novo.
-
-# Can't write temp file
-## @name MIME_ERROR_WRITING_FILE
-## @loc None
--1002=Erro ao escrever em arquivo temporário.
-
 # Mail subject
 ## @name MIME_MHTML_SUBJECT
 ## @loc None
@@ -142,50 +126,15 @@
 ## @loc 
 1016=Referências
 
-# Name
-## @name MIME_MHTML_NAME
-## @loc 
-1017=Nome
-
-# Type
-## @name MIME_MHTML_TYPE
-## @loc 
-1018=Tipo
-
-# Encoding
-## @name MIME_MHTML_ENCODING
-## @loc 
-1019=Codificação
-
-# Description
-## @name MIME_MHTML_DESCRIPTION
-## @loc 
-1020=Descrição
-
 # Message ID
 ## @name MIME_MHTML_MESSAGE_ID
 ## @loc 
 1021=Message-ID
 
-# Resent Message ID
-## @name MIME_MHTML_RESENT_MESSAGE_ID
-## @loc 
-1022=Resent-Message-ID
-
 # BCC
 ## @name MIME_MHTML_BCC
 ## @loc 
 1023=BCC
-
-# Download Status
-## @name MIME_MHTML_DOWNLOAD_STATUS_HEADER
-## @loc 
-1024=Status do download
-
-# Download status not downloaded
-## @name MIME_MHTML_DOWNLOAD_STATUS_NOT_DOWNLOADED
-## @loc 
-1025=Not Downloaded Inline
 
 # Link to doc
 ## @name MIME_MSG_LINK_TO_DOCUMENT
@@ -202,62 +151,11 @@
 ## @loc 
 1028=Anexo
 
-# Forwarded Msg Attachment
-## @name MIME_FORWARDED_MESSAGE_ATTACHMENT
-## @loc 
-# LOCALIZATION NOTE (1029): DONT_TRANSLATE.
-1029=forward.msg
-
-# Mouseover text
-## @name MIME_MSG_ADDBOOK_MOUSEOVER_TEXT
-## @loc 
-# LOCALIZATION NOTE (1030): Do not translate "%s" below. Place "%s" where you wish to appear a name to be
-# added to the address book.
-1030=Adicionar %s ao catálogo de endereços
-
-# XSender Internal
-## @name MIME_MSG_XSENDER_INTERNAL
-## @loc
-# LOCALIZATION NOTE (1031): Only translate the word "Internal" in the line below.
-1031=<B><FONT COLOR=042#808080042>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Internal</FONT></B>
-
-# User wrote
-## @name MIME_MSG_X_USER_WROTE
-## @loc 
-# LOCALIZATION NOTE (1032): Do not translate "%s" below.
-# Place the first %s where you wish the name of the message to appear
-# Place the second %s where you wish the name of the user to appear
-# Do not translate "<P>"
-1032=Na mensagem %s, %s escreveu:<P>
-
-# Msg user wrote
-## @name MIME_MSG_USER_WROTE
-## @loc 
-# LOCALIZATION NOTE (1033): Do not translate "%s" below.
-# Place the %s where you wish the name of the user to appear
-# Do not translate "<P>"
-1033=%s escreveu:<P>
-
-# No Headers
-## @name MIME_MSG_NO_HEADERS
-## @loc 
-1034=(sem cabeçalhos)
-
-# No Headers
-## @name MIME_MSG_SHOW_ATTACHMENT_PANE
-## @loc 
-1035=Alternar painel de anexos
-
-# Part not downloaded
-## @name MIME_MSG_NOT_DOWNLOADED
-## @loc 
-1036=(Não recebida)
-
 # Partial Message Format 1
 ## @name MIME_MSG_PARTIAL_FMT_1
 ## @loc
 # LOCALIZATION NOTE (1037): In the following line, translate only the word, "Truncated!".
-1037=<P><CENTER><TABLE BORDER CELLSPACING=5 CELLPADDING=10 WIDTH="80%%"><TR><TD ALIGN=CENTER><FONT SIZE="+1"><B>Mensagem recebida parcialmente!</B></FONT><HR>
+1037=<P><CENTER><TABLE BORDER CELLSPACING=5 CELLPADDING=10 WIDTH=\"80%%\"><TR><TD ALIGN=CENTER><FONT SIZE=\"+1\"><B>Mensagem recebida parcialmente!</B></FONT><HR>
 
 # Partial Message Format 2
 ## @name MIME_MSG_PARTIAL_FMT_2
@@ -265,14 +163,14 @@
 # LOCALIZATION NOTE (1038): Translate the following two lines as a single sentence. In the middle of the two sections
 # there will be a URL. You may translate the text in any order you wish, but the html tags must stay in the same locations.
 # In particular, the "<B>" tag must begin the first section, which must end with the "<A HREF=" tag. Do not translate the html tag,"<P>"
-1038=<B>O tamanho da mensagem excede o limite definido nas opções desta conta. Somente as primeiras linhas foram recebidas do servidor de mensagens.<P><A HREF="
+1038=<B>O tamanho da mensagem excede o limite definido nas opções desta conta. Somente as primeiras linhas foram recebidas do servidor de mensagens.<P><A HREF=\"
 
 # Partial Message Format 3
 ## @name MIME_MSG_PARTIAL_FMT_3
 ## @loc
 # LOCALIZATION NOTE (1039): This section must begin with the ">" sign and end with the tags,"</B></TD></TR></TABLE></CENTER>"
 # Do not translate "</A>" tag.
-1039=">Clique aqui</A> para receber a mensagem completa.</B></TD></TR></TABLE></CENTER>
+1039=\">Clique aqui</A> para receber a mensagem completa.</B></TD></TR></TABLE></CENTER>
 
 # default attachment name
 ## @name MIME_MSG_DEFAULT_ATTACHMENT_NAME
@@ -289,20 +187,20 @@
 # Partial Message Format2 1
 ## @name MIME_MSG_PARTIAL_FMT2_1
 ## @loc
-# LOCALIZATION NOTE (1037): In the following line, translate only the words, "Not Downloaded".
-1042=<P><CENTER><TABLE BORDER CELLSPACING=5 CELLPADDING=10 WIDTH="80%%"><TR><TD ALIGN=CENTER><FONT SIZE="+1"><B>Não recebido</B></FONT><HR>
+# LOCALIZATION NOTE (1042): In the following line, translate only the words, "Not Downloaded".
+1042=<P><CENTER><TABLE BORDER CELLSPACING=5 CELLPADDING=10 WIDTH=\"80%%\"><TR><TD ALIGN=CENTER><FONT SIZE=\"+1\"><B>Não recebido</B></FONT><HR>
 
 # Partial Message Format2 2
 ## @name MIME_MSG_PARTIAL_FMT2_2
 ## @loc
-# LOCALIZATION NOTE (1038): Translate the following two lines as a single sentence. In the middle of the two sections
+# LOCALIZATION NOTE (1043): Translate the following two lines as a single sentence. In the middle of the two sections
 # there will be a URL. You may translate the text in any order you wish, but the html tags must stay in the same locations.
 # In particular, the "<B>" tag must begin the first section, which must end with the "<A HREF=" tag. Do not translate the html tag,"<P>"
-1043=<B>Somente os cabeçalhos desta mensagem foram recebidos do servidor de mensagens.<P>Clique <A HREF="
+1043=<B>Somente os cabeçalhos desta mensagem foram recebidos do servidor de mensagens.<P>Clique <A HREF=\"
 
 # Partial Message Format2 3
-## @name MIME_MSG_PARTIAL_FMT_3
+## @name MIME_MSG_PARTIAL_FMT2_3
 ## @loc
-# LOCALIZATION NOTE (1039): This section must begin with the ">" sign and end with the tags,"</B></TD></TR></TABLE></CENTER>"
+# LOCALIZATION NOTE (1044): This section must begin with the ">" sign and end with the tags,"</B></TD></TR></TABLE></CENTER>"
 # Do not translate "</A>" tag.
-1044=">Clique aqui</A> para receber a mensagem completa.</B></TD></TR></TABLE></CENTER>
+1044=\">Clique aqui</A> para receber a mensagem completa.</B></TD></TR></TABLE></CENTER>
