--- a/pt-BR/mail/chrome/messenger/oeImportMsgs.properties
+++ b/pt-BR/mail/chrome/messenger/oeImportMsgs.properties
@@ -49,8 +49,8 @@
 # Description of import module
 ## @name OEIMPORT_DESCRIPTION
 ## @loc None
-## LOCALIZATION NOTE (2001): In this item, don't translate "Outlook Express"
-2001=Mensagens e catálogos de endereços do Outlook Express.
+## LOCALIZATION NOTE (2011): In this item, don't translate "Outlook Express"
+2011=Importar mensagens, catálogos de endereços e configurações do Outlook Express
 
 # Success message
 ## @name OEIMPORT_MAILBOX_SUCCESS
