--- a/en-GB/mail/chrome/messenger/messenger.properties
+++ b/en-GB/mail/chrome/messenger/messenger.properties
@@ -351,6 +351,16 @@ biffNotification_messages=has %1$S new messages
 newBiffNotification_message=%1$S has %2$S new message
 newBiffNotification_messages=%1$S has %2$S new messages
 
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=%1$S new message from %2$S.
+macBiffNotification_messages=%1$S new messages from %2$S.
+macBiffNotification_messages_extra=%1$S new messages from %2$S and %3$S more.
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=,\u0020
+
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S of %S kB used
 quotaPercentUsed=%S%% full
@@ -461,3 +471,15 @@ headerFieldYou=You
 
 # The what's new tab title, shown on version update
 whatsNew=What's New
+
+#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
+# glodaWhyColumn when performing a gloda-backed search, explaining why a
+# specific result is present in the search.  Because of how the message grouping
+# mechanism works, this value is both the value in the "Why" column as well as
+# the header for the group (when sorting/grouping on the why column.)  Short
+# strings are preferable so the why column can be understood without taking up
+# too much space.
+glodaSearch_results_why_contact=Contact
+glodaSearch_results_why_subject=Subject
+glodaSearch_results_why_body=Body
+glodaSearch_results_why_attachment=Attachment
