--- a/uk/mail/installer/mui.properties
+++ b/uk/mail/installer/mui.properties
@@ -44,49 +44,50 @@
 # Accesskeys are defined by prefixing the letter that is to be used for the
 # accesskey with an ampersand (e.g. &).
 
-# Do not replace $(^NameDA) or $(^Name) with a custom string.
+# Do not replace $BrandShortName, $BrandFullName, or $BrandFullNameDA with a
+# custom string and always use the same one as used by the en-US files.
+# $BrandFullNameDA allows the string to contain an ampersand (e.g. DA stands
+# for double ampersand) and prevents the letter following the ampersand from
+# being used as an accesskey.
 
-# Do not change $(^NameDA) to $(^Name) or $(^Name) to $(^NameDA). NameDA allows
-# Name to contain an ampersand (e.g. DA stands for double ampersand) and
-# prevents the letter following the ampersand being used as an accesskey.
 
 # You can use \n to create a newline in the string but only when the string
 # from en-US contains a \n.
-MUI_TEXT_WELCOME_INFO_TITLE=Вас вітає майстер встановлення $(^NameDA)
-MUI_TEXT_WELCOME_INFO_TEXT=Ця програма встановить $(^NameDA) на ваш комп’ютер.\n\nДо початку встановлення рекомендується закрити всі запущені програми. Це дозволить програмі встановлення оновити системні файли без перезавантаження комп’ютера.\n\n$_CLICK
+MUI_TEXT_WELCOME_INFO_TITLE=Вас вітає майстер встановлення $BrandFullNameDA
+MUI_TEXT_WELCOME_INFO_TEXT=Ця програма встановить $BrandFullNameDA на ваш комп’ютер.\n\nДо початку встановлення рекомендується закрити всі запущені програми. Це дозволить програмі встановлення оновити системні файли без перезавантаження комп’ютера.\n\n$_CLICK
 MUI_TEXT_COMPONENTS_TITLE=Компоненти встановлюваної програми
-MUI_TEXT_COMPONENTS_SUBTITLE=Виберіть компоненти $(^NameDA), котрі бажаєте встановити.
+MUI_TEXT_COMPONENTS_SUBTITLE=Виберіть компоненти $BrandFullNameDA, котрі бажаєте встановити.
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_TITLE=Опис
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_INFO=Наведіть курсор миші на назву компоненти щоб прочитати її опис.
 MUI_TEXT_DIRECTORY_TITLE=Вибір теки встановлення
-MUI_TEXT_DIRECTORY_SUBTITLE=Виберіть теку для встановлення $(^NameDA).
+MUI_TEXT_DIRECTORY_SUBTITLE=Виберіть теку для встановлення $BrandFullNameDA.
 MUI_TEXT_INSTALLING_TITLE=Копіювання файлів
-MUI_TEXT_INSTALLING_SUBTITLE=Зачекайте, триває копіювання файлів $(^NameDA)…
+MUI_TEXT_INSTALLING_SUBTITLE=Зачекайте, триває копіювання файлів $BrandFullNameDA…
 MUI_TEXT_FINISH_TITLE=Встановлення завершено.
 MUI_TEXT_FINISH_SUBTITLE=Встановлення успішно завершено.
 MUI_TEXT_ABORT_TITLE=Встановлення перервано.
 MUI_TEXT_ABORT_SUBTITLE=Встановлення не завершене.
 MUI_BUTTONTEXT_FINISH=&Гаразд
-MUI_TEXT_FINISH_INFO_TITLE=Майстер встановлення $(^NameDA) завершує роботу
-MUI_TEXT_FINISH_INFO_TEXT=Встановлення $(^NameDA) завершено.\n\nНатисніть кнопку «Гаразд» для виходу з програми встановлення.
-MUI_TEXT_FINISH_INFO_REBOOT=Для завершення програми встановлення $(^NameDA) необхідно перезавантажити комп’ютер. Хочете зробити це зараз?
+MUI_TEXT_FINISH_INFO_TITLE=Майстер встановлення $BrandFullNameDA завершує роботу
+MUI_TEXT_FINISH_INFO_TEXT=Встановлення $BrandFullNameDA завершено.\n\nНатисніть кнопку «Гаразд» для виходу з програми встановлення.
+MUI_TEXT_FINISH_INFO_REBOOT=Для завершення програми встановлення $BrandFullNameDA необхідно перезавантажити комп’ютер. Хочете зробити це зараз?
 MUI_TEXT_FINISH_REBOOTNOW=Так, перезавантажити ПК зараз
 MUI_TEXT_FINISH_REBOOTLATER=Ні, я перезавантажу ПК пізніше
 MUI_TEXT_STARTMENU_TITLE=Тека в меню «Пуск»
-MUI_TEXT_STARTMENU_SUBTITLE=Виберіть теку в меню «Пуск» для розташування ярликів $(^NameDA).
+MUI_TEXT_STARTMENU_SUBTITLE=Виберіть теку в меню «Пуск» для розташування ярликів $BrandFullNameDA.
 MUI_INNERTEXT_STARTMENU_TOP=Виберіть теку в меню «Пуск», де будуть розташовані ярлики програми. Ви також можете вказати іншу назву теки.
-MUI_TEXT_ABORTWARNING=Ви дійсно хочете перервати встановлення $(^Name)?
-MUI_UNTEXT_WELCOME_INFO_TITLE=Вас вітає майстер деінсталяції $(^NameDA)
-MUI_UNTEXT_WELCOME_INFO_TEXT=Ця програма прибере $(^NameDA) з вашого комп’ютера.\n\nПеред початком вилучення перевірте, щоб програма $(^NameDA) не була запущена.\n\n$_CLICK
-MUI_UNTEXT_CONFIRM_TITLE=Вилучення $(^NameDA)
-MUI_UNTEXT_CONFIRM_SUBTITLE=Вилучення $(^NameDA) з комп’ютера.
+MUI_TEXT_ABORTWARNING=Ви дійсно хочете перервати встановлення $BrandFullName?
+MUI_UNTEXT_WELCOME_INFO_TITLE=Вас вітає майстер деінсталяції $BrandFullNameDA
+MUI_UNTEXT_WELCOME_INFO_TEXT=Ця програма прибере $BrandFullNameDA з вашого комп’ютера.\n\nПеред початком вилучення перевірте, щоб програма $BrandFullNameDA не була запущена.\n\n$_CLICK
+MUI_UNTEXT_CONFIRM_TITLE=Вилучення $BrandFullNameDA
+MUI_UNTEXT_CONFIRM_SUBTITLE=Вилучення $BrandFullNameDA з комп’ютера.
 MUI_UNTEXT_UNINSTALLING_TITLE=Вилучення
-MUI_UNTEXT_UNINSTALLING_SUBTITLE=Зачекайте, триває стирання файлів $(^NameDA)…
+MUI_UNTEXT_UNINSTALLING_SUBTITLE=Зачекайте, триває стирання файлів $BrandFullNameDA…
 MUI_UNTEXT_FINISH_TITLE=Вилучення завершено
 MUI_UNTEXT_FINISH_SUBTITLE=Вилучення програми успішно завершено
 MUI_UNTEXT_ABORT_TITLE=Вилучення перервано
 MUI_UNTEXT_ABORT_SUBTITLE=Вилучення проведено не повністю.
-MUI_UNTEXT_FINISH_INFO_TITLE=Майстер вилучення $(^NameDA) завершує роботу
-MUI_UNTEXT_FINISH_INFO_TEXT=Програму $(^NameDA) прибрано з вашого комп’ютера.\n\nНатисніть кнопку «Готово» для виходу з програми вилучення.
-MUI_UNTEXT_FINISH_INFO_REBOOT=Щоб завершити вилучення $(^NameDA), необхідно перезавантажити комп’ютер. Хочете зробити це зараз?
-MUI_UNTEXT_ABORTWARNING=Ви дійсно хочете скасувати вилучення $(^Name)?
+MUI_UNTEXT_FINISH_INFO_TITLE=Майстер вилучення $BrandFullNameDA завершує роботу
+MUI_UNTEXT_FINISH_INFO_TEXT=Програму $BrandFullNameDA прибрано з вашого комп’ютера.\n\nНатисніть кнопку «Готово» для виходу з програми вилучення.
+MUI_UNTEXT_FINISH_INFO_REBOOT=Щоб завершити вилучення $BrandFullNameDA, необхідно перезавантажити комп’ютер. Хочете зробити це зараз?
+MUI_UNTEXT_ABORTWARNING=Ви дійсно хочете скасувати вилучення $BrandFullName?
