--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -293,7 +293,7 @@ mailnews.search_date_separator=
 mailnews.search_date_leading_zeros=true
 
 # offline msg
-nocachedbodybody=Meldingskroppen til denne meldinga har ikke blitt lastet ned fra \
+nocachedbodybody=Meldingsteksten til denne meldingen er ikke lastet ned fra \
 tjeneren for frakoblet lesing. For å lese denne meldingen må du koble til nettverket igjen, \
 velg Frakoblet tilstand fra fil-menyen og velg "Arbeid tilkoblet". \
 I framtiden kan du velge hvilke meldinger eller mapper som du vil lese frakoblet. For å \
