--- a/nb-NO/mail/chrome/messenger/search-attributes.properties
+++ b/nb-NO/mail/chrome/messenger/search-attributes.properties
@@ -1,7 +1,7 @@
 #these need to match nsMsgSearchAttrib interface in nsMsgSearchCore.idl
 0=Emne
 1=Avsender
-2=Meldingskropp
+2=Meldingstekst
 3=Dato
 4=Prioritet
 5=Status
