--- a/nb-NO/toolkit/chrome/global/commonDialogs.properties
+++ b/nb-NO/toolkit/chrome/global/commonDialogs.properties
@@ -10,7 +10,7 @@ Cancel=Avbryt
 Yes=&Ja
 No=&Nei
 Save=&Lagre
-Revert=&Tilbakestille
+Revert=&Tilbakestill
 DontSave=&Ikke lagre
 ScriptDlgGenericHeading=[JavaScript-program]
 ScriptDlgHeading=Nettsiden på %S sier:
