--- a/nb-NO/toolkit/chrome/global/config.properties
+++ b/nb-NO/toolkit/chrome/global/config.properties
@@ -37,7 +37,7 @@
 
 # Lock column values
 default=forvalgt
-user=brukerdefinert
+user=endret
 locked=låst
 
 # Type column values
@@ -47,6 +47,6 @@ bool=boolsk
 
 # Preference prompts
 # %S is replaced by one of the type column values above
-new_title=Ny %S verdi
-new_prompt=Skriv inn navnet på innstilling
-modify_title=Skriv inn %S verdi
+new_title=Ny %S-verdi
+new_prompt=Skriv inn navnet på innstillingen
+modify_title=Skriv inn %S-verdi
