--- a/nb-NO/toolkit/chrome/global/filepicker.properties
+++ b/nb-NO/toolkit/chrome/global/filepicker.properties
@@ -26,9 +26,9 @@ noButtonLabel=Nei
 saveAsLabel=Lagre som:
 
 errorOpenFileDoesntExistTitle=Feil ved åpning av %S
-errorOpenFileDoesntExistMessage=Filen %S finnes ikke.
+errorOpenFileDoesntExistMessage=Filen %S finnes ikke
 errorDirDoesntExistTitle=Feil ved tilgang til %S
-errorDirDoesntExistMessage=Mappen %S finnes ikke.
+errorDirDoesntExistMessage=Mappen %S finnes ikke
 
 errorOpeningFileTitle=Feil ved åpning av %S
 openWithoutPermissionMessage_file=Filen %S er ikke lesbar
@@ -49,7 +49,7 @@ errorCreateNewDirIsFileMessage=Klarte ikke opprette mappen, %S er en fil
 errorCreateNewDirPermissionMessage=Klarte ikke opprette mappen. %S er ikke skrivbar.
 
 promptNewDirTitle=Opprett ny mappe
-promptNewDirMessage=Mappenavn\:
+promptNewDirMessage=Mappenavn:
 
 errorPathProblemTitle=Ukjent feil
 errorPathProblemMessage=En ukjent feil har oppstått (mappe %S)
