--- a/nb-NO/toolkit/chrome/global/nsProgressDialog.properties
+++ b/nb-NO/toolkit/chrome/global/nsProgressDialog.properties
@@ -37,5 +37,5 @@
 
 savingAlertTitle=Lagrer %S
 openingAlertTitle=Åpner %S
-securityAlertMsg=Advarsel! Programfiler (EXE-filer) kan inneholde virus eller annen kode som kan skade datamaskinen din. Vær forsiktig med åpning av denne filen. Er du sikker på at du vil åpne %S?
+securityAlertMsg=Advarsel! Programfiler kan inneholde virus eller annen ondsinnet kode som kan skade datamaskinen din. Vær forsiktig når du åpner slike filer. Er du sikker på at du vil åpne %S?
 dontAskAgain=Ikke spør meg igjen.
