--- a/nb-NO/toolkit/chrome/global/viewSource.properties
+++ b/nb-NO/toolkit/chrome/global/viewSource.properties
@@ -2,7 +2,7 @@ goToLineTitle     = Gå til linje
 goToLineText      = Skriv inn linjenummer
 invalidInputTitle = Ugyldig inndata
 invalidInputText  = Linjenummeret du skrev inn er ugyldig.
-outOfRangeTitle   = Linjen ble ikke funnet
+outOfRangeTitle   = Fant ikke linjen
 outOfRangeText    = Klarte ikke finne den angitte linjen.
 statusBarLineCol  = Linje %1$S, kolonne %2$S
 viewSelectionSourceTitle = DOM-kildekode for valgt tekst
