--- a/nb-NO/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/nb-NO/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -15,7 +15,7 @@ profileLockedTitle=Profil allerede i bruk
 profileLocked2=%S kan ikke bruke profilen «%S» fordi den er allerede i bruk.\n\nLukk den kjørende instansen av %S for å fortsette, eller velg en annen profil.
 
 renameProfileTitle=Endre profilnavn
-renameProfilePrompt=Endre navnet på profilen «%S» til\:
+renameProfilePrompt=Endre navnet på profilen «%S» til:
 
 profileNameInvalidTitle=Ugyldig profilnavn
 profileNameInvalid=Profilnavnet «%S» er ikke tillatt.
