--- a/nb-NO/suite/chrome/mailnews/imapMsgs.properties
+++ b/nb-NO/suite/chrome/mailnews/imapMsgs.properties
@@ -166,7 +166,7 @@
 
 ## @name IMAP_EMPTY_MIME_PART
 ## @loc None
-5032=Meldingskroppen vil bli nedlastet etter behov.
+5032=Meldingsteksten vil bli nedlastet etter behov.
 
 ## @name IMAP_UNABLE_TO_SAVE_MESSAGE
 ## @loc None
