--- a/nb-NO/toolkit/chrome/global/xpinstall/xpinstall.properties
+++ b/nb-NO/toolkit/chrome/global/xpinstall/xpinstall.properties
@@ -56,17 +56,17 @@ ExecuteWithArgs=Kjører: %s med parametere: %s
 CopyFile=Kopierer fil: %s til %s
 ExecuteFile=Kjører: %s
 ExecuteFileWithArgs=Kjører fil: %s med parametere: %s
-MoveFile=Flytter Fil: %s til %s
+MoveFile=Flytter fil: %s til %s
 RenameFile=Endrer filnavn: %s til %s
 CreateFolder=Oppretter mappe: %s
 RemoveFolder=Fjern mappe: %s
 RenameFolder=Endrer mappenavn: %s til %s
 WindowsShortcut=Windows-snarvei: %s
-MacAlias=Mac Alias: %s
-WindowsRegisterServer=Windows Registertjener: %s
+MacAlias=Mac-alias: %s
+WindowsRegisterServer=Windows registertjener: %s
 UnknownFileOpCommand=Ukjent filoperasjon\!
 
-Patch=Lapper: %s
+Patch=Oppdaterer: %s
 
 Uninstall=Avinstallerer: %s
 
@@ -87,7 +87,7 @@ ConfirmLocale=Installer lokalet «%1$S» fra %2$S?
 
 OK=Installer
 
-progress.queued=Køet opp
+progress.queued=I kø
 progress.downloading=Laster ned …
 progress.downloaded=Lastet ned
 progress.installing=Installerer …
