--- a/nb-NO/toolkit/chrome/mozapps/plugins/plugins.properties
+++ b/nb-NO/toolkit/chrome/mozapps/plugins/plugins.properties
@@ -4,14 +4,14 @@ pluginInstallation.download.start=Laster ned %S …
 pluginInstallation.download.finish=Nedlasting av %S fullført.
 
 pluginInstallation.install.start=Installerer %S …
-pluginInstallation.install.finish=%S ble installert.
+pluginInstallation.install.finish=%S er nå installert.
 pluginInstallation.install.error=Klarte ikke installere %S (%S).
 
 pluginInstallation.complete=Installering av programtillegg fullført.
 
 pluginInstallationSummary.success=Installert
 pluginInstallationSummary.failed=Feilet
-pluginInstallationSummary.licenseNotAccepted=Lisens ikke godtatt.
+pluginInstallationSummary.licenseNotAccepted=Lisensavtale ikke godtatt
 pluginInstallationSummary.notAvailable=Ikke tilgjengelig
 pluginInstallationSummary.manualInstall.label=Manuell installering
 pluginInstallationSummary.manualInstall.tooltip=Manuelt installer programtillegget.
